--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyecto-batos-react",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:3000",
+  "proxy": "http://127.0.0.1:3000",
   "type": "module",
   "scripts": {
     "dev": "vite",
